--- a/index.html
+++ b/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wiki Search App</title>
+    <script
+      src="https://kit.fontawesome.com/1935d064dd.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+          <img class="my-5" src="wikipedia_png1.png" alt="wiki" style="width: 70%; aspect-ratio: 16 / 9; object-fit: cover;"/>
 
-<head>
-    
-    <link rel="stylesheet" href="wiki.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <div class="main-container">
-        <div class="wiki-search-header text-center">
-            <img class="wiki-logo" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/wiki-logo-img.png" />
-            <br />
-            <input placeholder="Type a keyword and press Enter to search" type="search" class="search-input w-100" id="searchInput" />
+          <form action="" class="d-flex">
+            <input
+              type="text"
+              class="form-control form-control-lg p-3 border border-success rounded-pill"
+            />
+            <button type="submit" class="btn ms-2">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+          <hr class="hide" />
         </div>
-        <div class="d-none" id="spinner">
-            <div class="d-flex justify-content-center">
-                <div class="spinner-border" role="status">
-                </div>
-            </div>
-        </div>
-        <div class="search-results" id="searchResults"></div>
+      </div>
     </div>
-    <script src="wiki.js"></script>
-</body>
 
+    <section>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <div class="results py-3">
+              <p class="alert alert-danger hide"></p>
+              <!-- Single search result -->
+              <!-- <div class="result p-2">
+                <a href="" target="_blank" class="h3 fw-bold"
+                  >Web Design Courses</a
+                ><br />
+                <a href="" target="_blank" class="fs-5 text-success"
+                  >https://en.wikipedia.org/</a
+                >
+                <p class="fs-5">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Velit illum corporis est, placeat nostrum nobis? Dolorum
+                  corrupti libero aliquid doloremque!
+                </p>
+              </div> -->
+              <!-- Single search result END -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="script.js"></script>
+  </body>
 </html>
