--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-          <img class="my-5" src="wikipedia_png1.png" alt="wiki" style="width: 70%; aspect-ratio: 16 / 9; object-fit: cover;"/>
+          <img class="my-5" src="images/wikipedia_png1.png" alt="wiki" style="width: 70%; aspect-ratio: 16 / 9; object-fit: cover;"/>
 
           <form action="" class="d-flex">
             <input
