--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wiki Search App</title>
+    <title>Wikipedia Search</title>
     <script
       src="https://kit.fontawesome.com/1935d064dd.js"
       crossorigin="anonymous"
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-          <img class="my-5" src="images/wikipedia_png1.png" alt="wiki" style="width: 70%; aspect-ratio: 16 / 9; object-fit: cover;"/>
+          <img class="my-5" src="images/search_logo.png" alt="Logo" style="width: 70%; aspect-ratio: 16 / 9; object-fit: cover;"/>
 
           <form action="" class="d-flex">
             <input
